# statecraft

./: .gitignore  CMakeLists.txt  README.md
include/core/: SimulationEngine.h  Types.h
include/systems/ai/: AISystem.h
include/systems/diplomacy/: DiplomacySystem.h
include/systems/economy/: EconomySystem.h
include/systems/electoral/: ElectoralSystem.h
include/systems/environment/: EnvironmentSystem.h
include/systems/events/: EventSystem.h
include/systems/infrastructure/: InfrastructureSystem.h
include/systems/intelligence/: IntelligenceSystem.h
include/systems/laws/: LawSystem.h
include/systems/military/: MilitarySystem.h
include/systems/modding/: ModdingSystem.h
include/systems/politics/: PoliticsSystem.h
include/systems/population/: PopulationSystem.h
include/ui/: GameUI.h
include/world/: WorldState.h
src/: main.cpp  main.cpp.bak
src/core/: SimulationEngine.cpp
src/systems/ai/: AISystem.cpp
src/systems/diplomacy/: DiplomacySystem.cpp
src/systems/economy/: EconomySystem.cpp
src/systems/electoral/: ElectoralSystem.cpp
src/systems/environment/: EnvironmentSystem.cpp
src/systems/events/: EventSystem.cpp
src/systems/infrastructure/: InfrastructureSystem.cpp
src/systems/intelligence/: IntelligenceSystem.cpp
src/systems/laws/: LawSystem.cpp
src/systems/military/: MilitarySystem.cpp
src/systems/modding/: ModdingSystem.cpp
src/systems/politics/: PoliticsSystem.cpp
src/systems/population/: PopulationSystem.cpp
src/ui/: GameUI.cpp
src/world/: WorldState.cpp
